# cuktech-ble-ha

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md
ble_server/: ble_manager.py  config.py  cuktech_ctl.sh  ha_server.py  history.py  pyproject.toml  state.py  state_protocol_v2.py
docs/: BLESPEC_REVERSE_ENGINEERING.md  MIJIA_PLUGIN_ANALYSIS.md  apk-reverse-engineering.md  develop-notes.md  esp32-readme-en.md  esp32-readme.md  integration-readme-en.md  integration-readme.md  mijia-plugin-analysis.md  server-readme-en.md  server-readme.md
esp32_ble/: CMakeLists.txt  README.md  RELEASE_NOTE.md  flash.sh  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3
esp32_ble/main/: CMakeLists.txt  bemfa.c  bemfa.h  ble_manager.c  ble_manager.h  config.h  config_store.c  config_store.h  http_server.c  http_server.h  main.c  miot_auth.c  miot_auth.h  miot_protocol.c  miot_protocol.h  ota_update.c  ota_update.h  queue_msg.h
ha_config/: cuktech_api.sh  cuktech_buttons.yaml  cuktech_ctl.sh  example_lovelace.yaml  (+2 more)
ha_integration/: CHANGELOG.md  hacs.json  pyproject.toml
ha_integration/.github/workflows/: hacs.yml  hassfest.yml
ha_integration/custom_components/cuktech_charger/: __init__.py  binary_sensor.py  config_flow.py  const.py  event.py  manifest.json  number.py  select.py  sensor.py  strings.json  switch.py
ha_integration/custom_components/cuktech_charger/translations/: zh-Hans.json
ha_integration/tests/: conftest.py  test_config_flow.py  test_const.py  test_coordinator.py  test_entities.py  test_integration.py
(+22 files in other folders)
