[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cuktech-charger-ha-integration"
version = "1.0.7"
description = "Home Assistant integration for CUKTECH 10 GaN Charger Ultra"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["custom_components"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
